[package]
name = "safe-find"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Safe wrappers for find and fd commands that block dangerous execution options"
repository = "https://github.com/masinc/safe-find"
authors = ["masinc"]
keywords = ["find", "fd", "security", "wrapper", "cli"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "safe-find"
path = "src/bin/safe-find.rs"

[[bin]]
name = "safe-fd"
path = "src/bin/safe-fd.rs"

[dependencies]

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link Time Optimization
codegen-units = 1   # Single codegen unit for better optimization
panic = "abort"     # Reduce binary size by removing panic handling
strip = true        # Strip symbols from binary
